# handover-sim2real

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
examples/: all_cvpr2023_models_test.sh  all_cvpr2023_results_eval.sh  finetune.yaml  pretrain.yaml  test.py  test.yaml  train.py  valid_grasp_dict_005.pkl
handover_sim2real/: __init__.py  config.py  policy.py  train_env.py  utils.py
output/: .gitignore  fetch_cvpr2023_models.sh  fetch_grasp_trigger_PRE_2.sh
results/: .gitignore  fetch_cvpr2023_results.sh
tests/: handover_sim2real_version_test.py
